--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "bugs": {
-    "url": "https://github.com/joeljeske/karma-parallel/issues"
+    "url": "https://github.com/juanallo/karma-parallelize/issues"
   },
   "contributors": [
     {
@@ -12,7 +12,7 @@
     "istanbul": "^0.4.5",
     "lodash": "^4.17.5"
   },
-  "description": "A Karma JS Framework to support sharding tests to run in parallel across multiple browsers",
+  "description": "A Karma JS Framework to support sharding tests to parallelize across multiple browsers",
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.9.0",
@@ -37,9 +37,10 @@
   "engines": {
     "node": ">=6"
   },
-  "homepage": "https://github.com/joeljeske/karma-parallel#readme",
+  "homepage": "https://github.com/juanallo/karma-parallelize.git#readme",
   "keywords": [
     "karma",
+    "karma-parallelize",
     "karma-parallel",
     "karma-sharding",
     "karma-plugin"
@@ -52,14 +53,14 @@
       "url": "https://github.com/joeljeske"
     }
   ],
-  "name": "karma-parallel",
+  "name": "karma-parallelize",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "readme": "README.md",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/joeljeske/karma-parallel.git"
+    "url": "git+https://github.com/juanallo/karma-parallelize.git"
   },
   "scripts": {
     "karma:jasmine": "karma start karma-confs/jasmine.conf.js",
