--- a/package.json
+++ b/package.json
@@ -1,81 +1,81 @@
 {
-  "bugs": {
-    "url": "https://github.com/juanallo/karma-parallelize/issues"
-  },
-  "contributors": [
-    {
-      "name": "Joel Jeske",
-      "url": "https://github.com/joeljeske"
-    }
-  ],
-  "dependencies": {
-    "istanbul": "^0.4.5",
-    "lodash": "^4.17.5"
-  },
-  "description": "A Karma JS Framework to support sharding tests to parallelize across multiple browsers",
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.9.0",
-    "eslint-plugin-security": "^1.4.0",
-    "jasmine": "^3.0.0",
-    "jasmine-core": "^2.8.0",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-mocha": "^1.3.0",
-    "mocha": "^5.0.1",
-    "npm-run-all": "^4.1.2"
-  },
-  "directories": {
-    "lib": "./lib",
-    "test": "./test"
-  },
-  "engines": {
-    "node": ">=6"
-  },
-  "homepage": "https://github.com/juanallo/karma-parallelize.git#readme",
-  "keywords": [
-    "karma",
-    "karma-parallelize",
-    "karma-parallel",
-    "karma-sharding",
-    "karma-plugin"
-  ],
-  "license": "MIT",
-  "main": "index.js",
-  "maintainers": [
-    {
-      "name": "Joel Jeske",
-      "url": "https://github.com/joeljeske"
-    }
-  ],
-  "name": "karma-parallelize",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
-  "readme": "README.md",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/juanallo/karma-parallelize.git"
-  },
-  "scripts": {
-    "karma:jasmine": "karma start karma-confs/jasmine.conf.js",
-    "karma:jasmine-junit": "karma start karma-confs/jasmine-junit.conf.js",
-    "karma:jasmine-focused": "karma start karma-confs/jasmine-focused.conf.js",
-    "karma:jasmine-coverage": "karma start karma-confs/jasmine-coverage.conf.js",
-    "karma:jasmine-istanbul-coverage": "karma start karma-confs/jasmine-istanbul-coverage.conf.js",
-    "karma:mocha": "karma start karma-confs/mocha.conf.js",
-    "karma:mocha-junit": "karma start karma-confs/mocha-junit.conf.js",
-    "karma:mocha-focused": "karma start karma-confs/mocha-focused.conf.js",
-    "karma:mocha-coverage": "karma start karma-confs/mocha-coverage.conf.js",
-    "karma:mocha-istanbul-coverage": "karma start karma-confs/mocha-istanbul-coverage.conf.js",
-    "karma": "run-p --aggregate-output karma:*",
-    "lint": "eslint --fix --config .eslintrc.json lib/\\*.js test/\\*.js index.js",
-    "test": "npm run lint && npm run karma"
-  },
-  "version": "0.2.4"
+    "name": "karma-parallelize",
+    "description": "A Karma JS Framework to support sharding tests to parallelize across multiple browsers",
+    "bugs": {
+        "url": "https://github.com/juanallo/karma-parallelize/issues"
+    },
+    "contributors": [
+        {
+            "name": "Juan Allo Ron",
+            "url": "https://github.com/juanallo"
+        }
+    ],
+    "dependencies": {
+        "istanbul": "^0.4.5",
+        "lodash": "^4.17.5"
+    },
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "eslint": "^4.9.0",
+        "eslint-plugin-security": "^1.4.0",
+        "jasmine": "^3.0.0",
+        "jasmine-core": "^2.8.0",
+        "karma": "^1.7.1",
+        "karma-chai": "^0.1.0",
+        "karma-chrome-launcher": "^2.2.0",
+        "karma-coverage": "^1.1.1",
+        "karma-coverage-istanbul-reporter": "^1.4.1",
+        "karma-jasmine": "^1.1.1",
+        "karma-junit-reporter": "^1.2.0",
+        "karma-mocha": "^1.3.0",
+        "mocha": "^5.0.1",
+        "npm-run-all": "^4.1.2"
+    },
+    "directories": {
+        "lib": "./lib",
+        "test": "./test"
+    },
+    "engines": {
+        "node": ">=6"
+    },
+    "homepage": "https://github.com/juanallo/karma-parallelize.git#readme",
+    "keywords": [
+        "karma",
+        "karma-parallelize",
+        "karma-parallel",
+        "karma-sharding",
+        "karma-plugin"
+    ],
+    "license": "MIT",
+    "main": "index.js",
+    "maintainers": [
+        {
+            "name": "Juan Allo Ron",
+            "url": "https://github.com/juanallo"
+        }
+    ],
+    "publishConfig": {
+        "registry": "https://registry.npmjs.org/"
+    },
+    "readme": "README.md",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/juanallo/karma-parallelize.git"
+    },
+    "scripts": {
+        "karma:jasmine": "karma start karma-confs/jasmine.conf.js",
+        "karma:jasmine-junit": "karma start karma-confs/jasmine-junit.conf.js",
+        "karma:jasmine-focused": "karma start karma-confs/jasmine-focused.conf.js",
+        "karma:jasmine-coverage": "karma start karma-confs/jasmine-coverage.conf.js",
+        "karma:jasmine-istanbul-coverage": "karma start karma-confs/jasmine-istanbul-coverage.conf.js",
+        "karma:mocha": "karma start karma-confs/mocha.conf.js",
+        "karma:mocha-junit": "karma start karma-confs/mocha-junit.conf.js",
+        "karma:mocha-focused": "karma start karma-confs/mocha-focused.conf.js",
+        "karma:mocha-coverage": "karma start karma-confs/mocha-coverage.conf.js",
+        "karma:mocha-istanbul-coverage": "karma start karma-confs/mocha-istanbul-coverage.conf.js",
+        "karma": "run-p --aggregate-output karma:*",
+        "lint": "eslint --fix --config .eslintrc.json lib/\\*.js test/\\*.js index.js",
+        "test": "npm run lint && npm run karma"
+    },
+    "version": "0.2.4"
 }
